include commit from previous layer admin polish.

--- a/angular/src/css/_geo-resource-container.scss
+++ b/angular/src/css/_geo-resource-container.scss
@@ -12,3 +12,12 @@ layer-admin {
         height: 100%;
     }
 }
+.layer-create-messages {
+    code.info {
+        color: #aaa;
+        background: transparent;
+    }
+    code.error {
+
+    }
+}
